[tool.poetry]
name = "screenshot-analyzer"
version = "0.1.0"
description = ""
authors = ["Justin Demetroff <43005128+jdemetroff-LiveData@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.20"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
